# retail-pricing-optimization

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
notebooks/: 01_data_understanding.ipynb  02_data_cleaning_feature_engineering.ipynb  03_retail_analytics.ipynb  04_baseline_demand_model.ipynb  05_neural_demand_forecasting.ipynb  06_price_elasticity_analysis.ipynb  07_promotion_coupon_impact.ipynb  08_profit_optimization.ipynb  09_dashboard_demo.ipynb
reports/: baseline_metrics.json  business_summary.md  catboost_calibrated_metrics.json  catboost_metrics.json  catboost_v2_candidates.json  catboost_v2_rmse_metrics.json  catboost_v2_tweedie_metrics.json  catboost_v2_weighted_mae_metrics.json  model_champion.json  model_diagnostics.json  model_diagnostics.md  modeling_ready_dataset.md  neural_metrics.json  pricing_model_champion.json  production_metrics.json
src/: __init__.py
src/analytics/: __init__.py  retail_analytics.py
src/config/: artifacts.py  paths.py
src/data/: __init__.py  clean_data.py  load_data.py
src/features/: build_features.py  filter_modeling_ready.py
src/models/: __init__.py  calibrate_demand_model.py  model_diagnostics.py  model_wrappers.py  select_champion.py  serving_features.py  train_baseline.py  train_catboost.py  (+3 more)
tests/: test_api.py  test_feature_engineering.py  test_model_wrappers.py  test_modeling_ready_filter.py  test_price_calculation.py  test_profit_optimizer.py  test_serving_safe_features.py
(+10 files in other folders)
