[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-pricing-optimization"
version = "0.1.0"
description = "Profit-aware retail pricing optimization using the Dunnhumby Complete Journey dataset."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

